// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Custom rendering 1`] = `
<div
  className="sc-cJSrbW dvBKrn"
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hmzhuo ePLdEr"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH klepqf"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH bHiKAK"
        >
          <p
            className="sc-bxivhb jVDCXG"
          >
            Select a value
          </p>
        </div>
      </div>
      <button
        className="sc-htoDjs TzVGU"
        color={undefined}
        disabled={false}
        icon={undefined}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-ksYbfQ ggioh"
    >
      <div
        className="sc-brqgnP jEhxYZ"
      >
        <div
          className="sc-cMljjf krgCXT"
        >
          <div
            className="sc-chPdSV kiPOer"
          >
            <div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <div
                        className="sc-bwzfXH btSquE"
                      >
                        <div
                          className="sc-bwzfXH kcWmUX"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb dMWGdr"
                        >
                          Bar A
                        </p>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <div
                        className="sc-bwzfXH btSquE"
                      >
                        <div
                          className="sc-bwzfXH kcWmUX"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb dMWGdr"
                        >
                          Foo B
                        </p>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <div
                        className="sc-bwzfXH btSquE"
                      >
                        <div
                          className="sc-bwzfXH kcWmUX"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb dMWGdr"
                        >
                          Bar C
                        </p>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <div
                        className="sc-bwzfXH btSquE"
                      >
                        <div
                          className="sc-bwzfXH kcWmUX"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb dMWGdr"
                        >
                          Foo D
                        </p>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <div
                        className="sc-bwzfXH btSquE"
                      >
                        <div
                          className="sc-bwzfXH kcWmUX"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb dMWGdr"
                        >
                          Bar E
                        </p>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <div
                        className="sc-bwzfXH btSquE"
                      >
                        <div
                          className="sc-bwzfXH kcWmUX"
                        >
                          <img
                            src="http://via.placeholder.com/100x100"
                          />
                        </div>
                        <p
                          className="sc-bxivhb dMWGdr"
                        >
                          Bar F
                        </p>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="sc-cJSrbW dvBKrn"
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hmzhuo ePLdEr"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH klepqf"
        onClick={[Function]}
      >
        <p
          className="sc-bxivhb jVDCXG"
        >
          <span
            className="sc-kgAjT WmYSY"
          >
            Search a value
          </span>
        </p>
      </div>
      <button
        className="sc-htoDjs TzVGU"
        color={undefined}
        disabled={false}
        icon={undefined}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-ksYbfQ ggioh"
    >
      <div
        className="sc-brqgnP jEhxYZ"
      >
        <div
          className="sc-cMljjf krgCXT"
        >
          <div
            className="sc-chPdSV kiPOer"
          >
            <div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <span
                        className="sc-ifAKCX kRfhnK"
                      >
                        Bar A
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <span
                        className="sc-ifAKCX kRfhnK"
                      >
                        Foo B
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <span
                        className="sc-ifAKCX kRfhnK"
                      >
                        Bar C
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <span
                        className="sc-ifAKCX kRfhnK"
                      >
                        Foo D
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <span
                        className="sc-ifAKCX kRfhnK"
                      >
                        Bar E
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="sc-TOsTZ NJJmQ"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <div
                  className="sc-bwzfXH calcHG"
                >
                  <span
                    className="sc-htpNat kFobJr"
                  >
                    <span
                      className="sc-htpNat hKonPW"
                    />
                    <div>
                      <span
                        className="sc-ifAKCX kRfhnK"
                      >
                        Bar F
                      </span>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;
